# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.51
DATE 03/14/2010
33rd Alpha Release

NEWS:

NEW: [features/improvements]

BUG FIXES:
+Unsubscribe from file history messages on window deletion
+Fix issue in handling invalid data in custom style sheets.

#-----------------------------------------------------------------------------#

VERSION 0.5.51
DATE 03/14/2010
33rd Alpha Release

NEWS:

This release was initially going to be held until wxPython 2.8.11 was released
but it seems to be delayed so this release will still have some minor issues
when running on OSX 10.6.

There are a number of new features in this release. The tabs in the notebooks
can be dragged out to split the notebook into separate views so that files can
be viewed side by side. This feature has also been extended to the Shelf window.
There are also new versions of the CodeBrowser and Launch plugins included with
this release. For detailed changes please review the changelog below.

NEW: [features/improvements]
+Tabs can be dragged out to split notebooks so that buffers and Shelf items
can be viewed side by side.
+What items are displayed in the Lexer menu are now configurable.
+Basic support for highlighting asp script embedded in html files.
+New version of Launch plugin with some bug fixes.
+Add Close Others option to right click tab menu to close all but the selected tab.
+Add support for highlighting Forth source files.
+Add support for Java to CodeBrowser (patch from Eric Gaudet)
+Add support for Diff files to CodeBrowser (patch from Eric Gaudet)
+Custom autobackup directory can be configured.
+Extend HTML support to support HTML5 syntax (patch from Hagn99)
+Add --no-clean option to source file installer to skip old file cleanup.

LIBRARY: